# stars-reborn

./: .gitignore  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  FRONTEND_AUTH_CHANGES.md  FRONTEND_AUTH_FIXES_COMPLETE.md  FRONTEND_AUTH_FIXES_SUMMARY.md  FRONTEND_AUTH_IMPLEMENTATION_DETAILS.md  FRONTEND_AUTH_TESTING_GUIDE.md  FRONTEND_BACKEND_COMPATIBILITY_REPORT.md  LICENSE  Makefile  README.md  README_FRONTEND_AUTH_FIXES.md
backend/: .env.example  Cargo.toml  PHASE-2-SUMMARY.md  PHASE-3-SUMMARY.md  PHASE-4-SUMMARY.md  PHASE-5-SUMMARY.md  PHASE-7-QUICKSTART.md  PHASE-7-SUMMARY.md  backend-auth-implementation-phases-2026-04-16.md  backend-review-auth-architecture-2026-04-16.md
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20240101_000001_create_users_table.rs  m20240101_000002_create_api_tokens_table.rs  m20240101_000003_create_refresh_sessions_table.rs
backend/src/: config.rs  db.rs  error.rs  jwt.rs  lib.rs  main.rs
backend/src/features/: mod.rs
backend/src/features/api_tokens/: handler.rs  mod.rs  model.rs  routes.rs
backend/src/features/auth/: mod.rs
backend/src/features/auth/discord/: handler.rs  routes.rs
backend/src/features/auth/local/: handler.rs  mod.rs  routes.rs
backend/src/features/auth/refresh_sessions/: handler.rs  mod.rs  model.rs  routes.rs  tests.rs
backend/src/features/users/: dto.rs  handler.rs  mod.rs  model.rs  routes.rs
backend/src/middleware/: auth.rs
backend/tests/: README.md  auth_integration.rs  db_smoke.rs
backend/tests/common/: mod.rs
dev/: Caddyfile  Caddyfile.example  README.md
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/src/: styles.scss  test-setup.ts
frontend/src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
frontend/src/app/core/: auth.interceptor.ts  auth.service.ts
frontend/src/app/features/api-tokens/: api-tokens.component.ts
frontend/src/app/features/auth/discord-callback/: discord-callback.component.ts
frontend/src/app/features/auth/login/: login.component.ts
frontend/src/app/features/auth/register/: register.component.ts
frontend/src/app/features/dashboard/: dashboard.component.ts
frontend/src/environments/: environment.localhost-https.example.ts
