[package]
name = "stars-reborn-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["cookie", "cookie-private", "typed-header"] }
cookie = { version = "0.18", features = ["private", "key-expansion"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
migration = { path = "migration" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
jsonwebtoken = "10"
bcrypt = "0.19"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"
hex = "0.4"
sha2 = "0.11"
oauth2 = { version = "5", features = ["reqwest"] }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1"
thiserror = "2"
tower = "0.5"
async-trait = "0.1"
time = "0.3"
